# fast-watermark

./: .gitignore  .npmignore  Cargo.toml  LICENSE  PERFORMANCE_OPTIMIZATION.md  README.md  benchmark.html  build.bat  build.sh  example.html  index.d.ts  index.js  package.json  test.html  test.js  watermark-worker.js  watermarkHelper.js  worker-pool.js
pkg/: wasm_watermark.d.ts  wasm_watermark.js  wasm_watermark_bg.wasm  wasm_watermark_bg.wasm.d.ts
src/: lib.rs
